# notes-tinkering

./: .gitignore
be/: .gitignore  Cargo.toml
be/db_scripts/: scripts.sql
be/src/: constants.rs  db.rs  db_entities.rs  dto.rs  json.rs  main.rs  services.rs  traits.rs
be/src/constants/: db_constants.rs
be/src/db/: notes_db.rs  user_db.rs
be/src/db_entities/: note_entity.rs  note_list_entity.rs  user_entity.rs
be/src/dto/: new_note_dto.rs  new_user_dto.rs
be/src/json/: credentials.rs  new_note.rs  new_user.rs  note_response.rs  notes_list_item.rs  user_response.rs
be/src/services/: login.rs  notes.rs  register.rs
be/src/traits/: object_mapping.rs
fe/: package.json  pnpm-lock.yaml
fe/src/: App.res
fe/src/components/: AddMode.res  ViewMode.res
fe/src/constants/: ApiConstants.res
